# ryobot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  github-ryobot.yml  ryobot.yml
bots/: __init__.py  architect.py  coder.py  config.py  explorer.py  pm.py  reviewer.py
core/: __init__.py  agent.py  plugins.py  prompts.py  ryo_agent.py  skills.py
tests/: test_agent.py  test_anthropic_adapter.py  test_github_plugin.py  test_github_skills.py  test_main.py  test_ryo_agent.py  test_skills.py
