[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ryobot"
version = "0.1.0"
description = "Hexagonal core for a serverless AI agent engine."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.0,<1.0.0",
    "openai>=1.30.0,<2.0.0",
    "pydantic>=2.7.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["core*", "platforms*"]
