[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ryobot"
version = "0.1.0"
description = "Hexagonal core for the RyoBot serverless orchestration engine."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "openai>=1.30.0,<2.0.0",
    "pydantic>=2.7.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0,<2.0.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "ruff>=0.6.0,<1.0.0",
]

[project.scripts]
ryobot = "main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B039", "E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_strict_optional = true
check_untyped_defs = true
disable_error_code = ["misc", "override", "union-attr"]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["bots*", "core*", "platforms*"]
